fix: added new commands to setup server easy
due to pickel file corruption, code changes made to convert data to json first and then populate

--- a/Pipfile
+++ b/Pipfile
@@ -4,11 +4,12 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-django = "*"
 django-allauth = "*"
 python-dotenv = "*"
 pillow = "*"
 beautifulsoup4 = "*"
+lxml = "*"
+django = "==3.2"
 
 [dev-packages]
 
